tests/reference/asr-arrays_02-da94458.stderr
semantic error: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()
  --> tests/errors/arrays_02.py:28:8
   |
28 | assert r1.a == t1.a
   |        ^^^^^^^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
